add function with weather icons and temp conversion

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,3 +82,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.current-forecastBorder {
+    background-color: white;
+    width: 80%;
+    margin: auto;
+    padding: 15px;
+}
